name:                react-flux-example
version:             1.0.0
synopsis:            An example react-flux application
category:            Web
homepage:            https://bitbucket.org/wuzzeb/react-flux-example
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          John Lenz <wuzzeb@gmail.com>
build-type:          Simple
description:         See the README below.
cabal-version:       >=1.10

extra-source-files:
    README.md
    Makefile
    html/*.html
    html/*.css
    node/*.js

source-repository head
    type: mercurial
    location: https://bitbucket.org/wuzzeb/react-flux-example

executable todo
   ghc-options: -Wall
   cpp-options: -DGHCJS_BROWSER

   other-modules: TodoComponents
                , TodoDispatcher
                , TodoStore
                , TodoViews

   default-language: Haskell2010
   hs-source-dirs: src
   main-is: Main.hs
   build-depends: base
                , react-flux >= 1.3 && < 1.4
                , deepseq
                , text
                , ghcjs-base

executable todo-node
   ghc-options: -Wall

   other-modules: TodoComponents
                , TodoDispatcher
                , TodoStore
                , TodoViews

   default-language: Haskell2010
   hs-source-dirs: src
   main-is: NodeMain.hs
   build-depends: base
                , react-flux >= 1.3 && < 1.4
                , deepseq
                , text
                , ghcjs-base
